--- a/app/views/profile.ejs
+++ b/app/views/profile.ejs
@@ -5,6 +5,7 @@
 		<option value="1">News Feed</option>
 		<option value="2">Post</option>
 		<option value="3">Follows</option>
+		<option value="4">View profile</option>
 		</select>
 		<input type="submit" name="submit" Value="GO"/>
     </form>
