--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -1,6 +1,7 @@
-<form method="post" action="/api/register">
+<form method="post" action="/api/register" enctype="multipart/form-data">
         <input type="text" name="first_name" placeholder="First Name"/>
         <input type="text" name="last_name" placeholder="Last Name"/>
         <input type="password" name="password" placeholder="Password"/>
+        <input type="file" name="picture"/>
         <input type="submit" name="submit" Value="GO"/>
     </form>
