Home Page created

--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -1,2 +1,27 @@
+<footer>
+
+  <div  class = "footer">
+  <div class="nc">
+<a href="#">Contacts </a>  &nbsp &nbsp;
+<a href="#">News</a>
+</br>
+<p>&#169;<strong> 2016 facing</strong>.All rights reserved </p>
+</div>
+  <div class="img">
+<a href="#">  <img src="images/fb.png"></a>
+	<a href="#"><img src="images/tw.png"></a>
+<a href="#"><img src="images/in.png"></a>
+<a href="#"><img src="images/yt.png"></a>
+</div>
+<div class="pln">
+<img src="images/plan9.png">
+
+</div>
+
+
+  </div>
+
+</footer>
+
 </body>
 </html>
