--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,6 +1,39 @@
 <% include header %>
+<div id = "mainContainer">
+<!-- Header Logo  -->
 
-  <h1><%-title %></h1>
-  <p>Welcome to <%-title %></p>
+  <header>
+      <img src="/images/logo.png" alt="" /> <!-- Add Logo Image -->
+  </header>
+
+<!-- End Header -->
+<!-- Content Area Start -->
+  <div class="red-bg">
+      <div class="left-container">
+	  <div class="text1" >
+
+        <h1>
+          Face to face interaction <br /> without going online
+        </h1>
+
+		<span class="hr"></span>
+
+
+        <p class="text">
+          Professionals some text here<br /> in the creative industries.
+		  <br />
+        </p>
+
+
+        <a href="#" class="btn">Download Now</a>
+		</div>
+      </div>
+	  <!-- .left-container -->
+      <div class="right-container"><img class="mob" src="/images/app.png" alt="apps" /> </div> <!-- Add Phone image-->
+
+
+
+  </div><!-- .red-bg -->
+<!-- Content Area End -->
 
 <% include footer %>
